--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "www.ryantf.com",
   "scripts": {
     "dev": "vite",
     "predeploy": "npm run build",
